Refactor of PrimitiveListValueDecoder which avoid to use autoboxing